--- a/11-worldwise/worldwise/package.json
+++ b/11-worldwise/worldwise/package.json
@@ -4,7 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite & json-server --watch data/cities.json --port 8000 --delay 500",
+    "dev": "vite",
+    "server": "json-server --watch data/cities.json --port 8000 --delay 500",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
