--- a/16-fast-react-pizza/fast-react-pizza/package.json
+++ b/16-fast-react-pizza/fast-react-pizza/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "6"
+    "react-router-dom": "6",
+    "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -26,6 +28,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "vite": "^6.1.0"
   }
 }
